syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message CreateActionRequest {
	OpAction action = 1;
}

message CreateActionResponse {
	Action action = 1;
}
